Finished Website Design

--- a/index.html
+++ b/index.html
@@ -28,30 +28,64 @@
     </section>
     <main class="py-32 px-32">
         <h2 class="text-4xl font-bold text-center">Your Favorite Food</h2>
-        <div class="food-items grid grid-cols-2">
-            <div class="items flex justify-center items-center">
+        <div class="food-items grid grid-cols-2 gap-4 mt-20">
+            <div class="items flex justify-center items-center border border-slate-200 rounded-t-lg">
                 <img class="w-60 h-96 object-cover rounded-t-lg" src="images/Burger-and-Fries.jpg" alt="">
-                <div class="item-text pl-4">
+                <div class="item-text pl-4 h-full flex flex-col justify-center gap-4">
                     <h3 class="font-bold text-2xl">Chicken Handi</h3>
                     <p class="">There are many variations of passages of available, but the majority have suffered</p>
                     <a class="underline underline-offset-2 text-yellow-400" href="#">View Details</a>
                 </div>
             </div>
-            <div class="items flex justify-center items-center">
+            <div class="items flex justify-center items-center border border-slate-200 rounded-t-lg">
                 <img class="w-60 h-96 object-cover rounded-t-lg" src="images/Burger-and-Fries.jpg" alt="">
-                <div class="item-text pl-4">
-                    <h3>Chicken Handi</h3>
-                    <p>There are many variations of passages of available, but the majority have suffered</p>
-                    <a href="#">View Details</a>
+                <div class="item-text pl-4 h-full flex flex-col justify-center gap-4">
+                    <h3 class="font-bold text-2xl">Chicken Handi</h3>
+                    <p class="">There are many variations of passages of available, but the majority have suffered</p>
+                    <a class="underline underline-offset-2 text-yellow-400" href="#">View Details</a>
+                </div>
+            </div>
+            <div class="items flex justify-center items-center border border-slate-200 rounded-t-lg">
+                <img class="w-60 h-96 object-cover rounded-t-lg" src="images/Burger-and-Fries.jpg" alt="">
+                <div class="item-text pl-4 h-full flex flex-col justify-center gap-4">
+                    <h3 class="font-bold text-2xl">Chicken Handi</h3>
+                    <p class="">There are many variations of passages of available, but the majority have suffered</p>
+                    <a class="underline underline-offset-2 text-yellow-400" href="#">View Details</a>
+                </div>
+            </div>
+            <div class="items flex justify-center items-center border border-slate-200 rounded-t-lg">
+                <img class="w-60 h-96 object-cover rounded-t-lg" src="images/Burger-and-Fries.jpg" alt="">
+                <div class="item-text pl-4 h-full flex flex-col justify-center gap-4">
+                    <h3 class="font-bold text-2xl">Chicken Handi</h3>
+                    <p class="">There are many variations of passages of available, but the majority have suffered</p>
+                    <a class="underline underline-offset-2 text-yellow-400" href="#">View Details</a>
+                </div>
+            </div>
+            <div class="items flex justify-center items-center border border-slate-200 rounded-t-lg">
+                <img class="w-60 h-96 object-cover rounded-t-lg" src="images/Burger-and-Fries.jpg" alt="">
+                <div class="item-text pl-4 h-full flex flex-col justify-center gap-4">
+                    <h3 class="font-bold text-2xl">Chicken Handi</h3>
+                    <p class="">There are many variations of passages of available, but the majority have suffered</p>
+                    <a class="underline underline-offset-2 text-yellow-400" href="#">View Details</a>
+                </div>
+            </div>
+            <div class="items flex justify-center items-center border border-slate-200 rounded-t-lg">
+                <img class="w-60 h-96 object-cover rounded-t-lg" src="images/Burger-and-Fries.jpg" alt="">
+                <div class="item-text pl-4 h-full flex flex-col justify-center gap-4">
+                    <h3 class="font-bold text-2xl">Chicken Handi</h3>
+                    <p class="">There are many variations of passages of available, but the majority have suffered</p>
+                    <a class="underline underline-offset-2 text-yellow-400" href="#">View Details</a>
                 </div>
             </div>
         </div>
-        <button>Show All</button>
+        <div class="btn-center flex flex-col items-center justify-center mt-20">
+            <button class="bg-yellow-400 font-bold py-3 px-8 rounded-lg">Show All</button>
+        </div>
     </main>
-    <footer>
-        <div class="nav-section">
-            <h4>Navigation</h4>
-            <div>
+    <footer class="bg-orange-50 flex gap-4 p-32">
+        <div class="nav-section basis-1/5">
+            <h4 class="text-xl font-bold">Navigation</h4>
+            <div class="mt-8 flex flex-col gap-4">
                 <a href="#">Home</a>
                 <a href="#">Features</a>
                 <a href="#">Pricing</a>
@@ -59,31 +93,31 @@
                 <a href="#">About</a>
             </div>
         </div>
-        <div class="other-section">
-            <h4>Section</h4>
-            <div>
+        <div class="other-section basis-1/5">
+            <h4 class="text-xl font-bold">Section</h4>
+            <div class="mt-8 flex flex-col gap-4">
                 <a href="#">UI/UX Design</a>
                 <a href="#">Product Design</a>
                 <a href="#">Back End Developer</a>
                 <a href="#">Front End Developer</a>
             </div>
         </div>
-        <div class="resource">
-            <h4>Resource</h4>
-            <div>
+        <div class="resource basis-1/5">
+            <h4 class="text-xl font-bold">Resource</h4>
+            <div class="mt-8 flex flex-col gap-4">
                 <a href="#">FAQ</a>
                 <a href="#">Support</a>
                 <a href="#">Privacy Policy</a>
                 <a href="#">Terms of Services</a>
             </div>
         </div>
-        <div class="newsletter">
-            <h4>Subscribe to our newsletter</h4>
-            <div>
-                <p>There are many variations of passages of available, but the majority have suffered</p>
+        <div class="newsletter basis-2/5">
+            <h4 class="text-xl font-bold">Subscribe to our newsletter</h4>
+            <div class="mt-8 flex flex-col gap-4">
+                <p class="text-slate-600">There are many variations of passages of available, but the majority have suffered</p>
                 <div>
-                    <input type="email" name="" id="" placeholder="Email Address">
-                    <button>Subscribe</button>
+                    <input class="py-3 px-8 rounded-lg border border-slate-200" type="email" name="" id="" placeholder="Email Address">
+                    <button class="bg-yellow-400 font-bold py-3 px-4 rounded-lg">Subscribe</button>
                 </div>
             </div>
         </div>
